--- a/panel.html
+++ b/panel.html
@@ -13,24 +13,22 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("textura-fondo.jpg") no-repeat center center fixed; /* CORREGIDO */
+      background: url("textura-fondo.jpg") no-repeat center center fixed;
       background-size: cover;
       color: var(--azul-oscuro);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
+    
 
     .panel-container {
       background: white;
       padding: 40px;
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      text-align: center;
+      margin: 30px auto;
       width: 90%;
-      max-width: 500px;
+      max-width: 1200px;
     }
+
 
     .panel-container h1 { margin-bottom: 15px; }
     .panel-container p { margin-bottom: 30px; color: #333; }
@@ -47,12 +45,141 @@
       transition: background 0.3s ease;
     }
     .logout-btn:hover { background-color: #4b89b3; }
+      .dashboard-sections {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.section-card {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  text-align: left;
+}
+
+.section-card h2 {
+  margin-top: 0;
+  color: var(--azul-oscuro);
+}
+
+.section-card button {
+  background-color: var(--azul-claro);
+  border: none;
+  padding: 10px 18px;
+  border-radius: 6px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+.section-card button:hover {
+  background-color: #4b89b3;
+}
+
+.progress {
+  background: #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 10px 0;
+}
+.progress-bar {
+  background: var(--azul-claro);
+  color: white;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 8px 0 0 8px;
+  font-size: 14px;
+}
+      @media (min-width: 768px) {
+  .dashboard-sections {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+      .main-header {
+  background: var(--azul-oscuro);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 30px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.main-header .logo {
+  height: 40px;
+}
+
+.main-header nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.main-header nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.main-header nav a:hover {
+  color: var(--azul-claro);
+}
+
+
   </style>
 </head>
 <body>
+    <header class="main-header">
+      <img src="logo.png" alt="Lean Solutions" class="logo">
+      <nav>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Cursos</a></li>
+          <li><a href="#">Soporte</a></li>
+          <li><a href="#">Mi Cuenta</a></li>
+        </ul>
+      </nav>
+    </header>
   <div class="panel-container">
     <h1>Bienvenido al Panel Privado</h1>
     <p>Este espacio es exclusivo para usuarios registrados de <strong>Lean Solutions</strong>.</p>
+      <div class="dashboard-sections">
+  <!-- Tickets -->
+  <div class="section-card">
+    <h2>Solicitar Asesoría</h2>
+    <p>Levanta un ticket para agendar asesoría personalizada.</p>
+    <button>Levantar Ticket</button>
+  </div>
+
+  <!-- Material de consulta -->
+  <div class="section-card">
+    <h2>Material de Consulta</h2>
+    <p>Accede a artículos, guías y documentos disponibles.</p>
+    <button>Ver Material</button>
+  </div>
+
+  <!-- Cursos ofertados -->
+  <div class="section-card">
+    <h2>Cursos Disponibles</h2>
+    <p>Explora los cursos que ofrecemos actualmente.</p>
+    <button>Ver Cursos</button>
+  </div>
+
+  <!-- Mis cursos -->
+  <div class="section-card">
+    <h2>Mis Cursos</h2>
+    <p>Revisa los cursos que has adquirido y tu progreso.</p>
+    <div class="progress">
+      <div class="progress-bar" style="width: 40%;">40%</div>
+    </div>
+    <button>Ir a Mis Cursos</button>
+  </div>
+</div>
     <button class="logout-btn" onclick="logout()">Cerrar sesión</button>
   </div>
 
