--- a/panel.html
+++ b/panel.html
@@ -163,6 +163,17 @@ nav a {
   text-align: center;
   margin-top: 30px;
 }
+/* Centrar botón de cerrar sesión en la card principal */
+.logout-container {
+  text-align: center;
+  margin-top: 30px;
+}
+
+/* Centrar botones dentro de las section-card */
+.section-card button {
+  display: block;
+  margin: 0 auto;
+}
 
 
   </style>
@@ -241,5 +252,8 @@ nav a {
       signOut(auth).then(() => window.location.href = "index.html");
     };
   </script>
+        <footer>
+  <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
+</footer>
 </body>
 </html>
