mis-cursos.html

--- a/mis-cursos.html
+++ b/mis-cursos.html
@@ -127,5 +127,8 @@
       signOut(auth).then(() => window.location.href = "index.html");
     });
   </script>
+  <footer>
+  <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
+</footer>
 </body>
 </html>
