--- a/panel.html
+++ b/panel.html
@@ -9,7 +9,6 @@
       --azul-oscuro: #1D2A4D;
       --azul-claro: #6EA8D8;
     }
-
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -17,7 +16,51 @@
       background-size: cover;
       color: var(--azul-oscuro);
     }
-    
+
+    /* Header */
+    header { 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+      padding: 10px 40px; 
+      background: var(--azul-oscuro); 
+      color: white;
+      border-bottom: 2px solid rgba(255,255,255,0.2);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      position: relative;
+    }
+    header::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 6px;
+      background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
+    }
+    header .logo img {
+      height: 50px;
+      width: auto;
+      display: block;
+      background-color: #FFFFFF;
+      padding: 10px;
+      border-radius: 50px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    nav { display: flex; align-items: center; gap: 15px; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    nav a:hover { color: var(--azul-claro); }
+    nav button {
+      background-color: var(--azul-claro);
+      border: none;
+      padding: 8px 16px;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    nav button:hover { background-color: #4b89b3; }
 
     .panel-container {
       background: white;
@@ -29,207 +72,99 @@
       max-width: 1200px;
     }
 
+    .dashboard-sections {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    @media (min-width: 768px) {
+      .dashboard-sections { grid-template-columns: 1fr 1fr; }
+    }
 
-    .panel-container h1 { margin-bottom: 15px; }
-    .panel-container p { margin-bottom: 30px; color: #333; }
-
-    .logout-btn {
+    .section-card {
+      background: #f9f9f9;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: left;
+    }
+    .section-card h2 { margin-top: 0; color: var(--azul-oscuro); }
+    .section-card button {
+      display: block;
+      margin: 0 auto;
       background-color: var(--azul-claro);
       border: none;
-      padding: 12px 24px;
-      border-radius: 8px;
+      padding: 10px 18px;
+      border-radius: 6px;
       color: white;
-      font-size: 16px;
       font-weight: bold;
       cursor: pointer;
       transition: background 0.3s ease;
     }
-    .logout-btn:hover { background-color: #4b89b3; }
-      .dashboard-sections {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-  margin-top: 20px;
-}
+    .section-card button:hover { background-color: #4b89b3; }
 
-.section-card {
-  background: #f9f9f9;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  text-align: left;
-}
+    .logout-container { text-align: center; margin-top: 30px; }
 
-.section-card h2 {
-  margin-top: 0;
-  color: var(--azul-oscuro);
-}
-
-.section-card button {
-  background-color: var(--azul-claro);
-  border: none;
-  padding: 10px 18px;
-  border-radius: 6px;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-.section-card button:hover {
-  background-color: #4b89b3;
-}
-
-.progress {
-  background: #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  margin: 10px 0;
-}
-.progress-bar {
-  background: var(--azul-claro);
-  color: white;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 8px 0 0 8px;
-  font-size: 14px;
-}
-      @media (min-width: 768px) {
-  .dashboard-sections {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-      .main-header {
-  background: var(--azul-oscuro);
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 30px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-}
-
-/* Header */
-header { 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 10px 40px; 
-    background: var(--azul-oscuro); 
-    color: white;
-    border-bottom: 2px solid rgba(255,255,255,0.2);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    position: relative;
-}
-header::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 6px;
-    background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
-}
-
-header .logo img {
-    height: 50px;
-    width: auto;
-    display: block;
-    background-color: #FFFFFF;
-    padding: 10px;
-    border-radius: 50px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-}
-
-nav { display: flex; align-items: center; }
-nav a {
-    margin: 0 20px;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-.logout-btn {
-    padding: 8px 16px;
-    background-color: var(--azul-claro);
-    border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    font-weight: bold;
-}
-.logout-btn:hover {
-    background-color: #4b89b3;
-}
-.logout-container {
-  text-align: center;
-  margin-top: 30px;
-}
-/* Centrar botón de cerrar sesión en la card principal */
-.logout-container {
-  text-align: center;
-  margin-top: 30px;
-}
-
-/* Centrar botones dentro de las section-card */
-.section-card button {
-  display: block;
-  margin: 0 auto;
-}
-
-
+    footer {
+      background-color: var(--azul-oscuro);
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
   </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <a href="index.html"><img src="logo.png" alt="Lean Solutions"></a>
-        </div>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="about.html">Cursos</a>
-            <a href="#">Soporte</a>
-            <a href="#">Mi cuenta</a>
-            <button id="logout-btn" class="logout-btn">Cerrar sesión</button>
-        </nav>
-    </header>
+  <header>
+    <div class="logo"><a href="index.html"><img src="logo.png" alt="Lean Solutions"></a></div>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="about.html">Cursos</a>
+      <a href="#">Soporte</a>
+      <a href="#">Mi cuenta</a>
+      <button id="logout-btn">Cerrar sesión</button>
+    </nav>
+  </header>
+
   <div class="panel-container">
     <h1>Bienvenido al Panel Privado</h1>
     <p>Este espacio es exclusivo para usuarios registrados de <strong>Lean Solutions</strong>.</p>
-      <div class="dashboard-sections">
-  <!-- Tickets -->
-  <div class="section-card">
-    <h2>Solicitar Asesoría</h2>
-    <p>Levanta un ticket para agendar asesoría personalizada.</p>
-    <button>Levantar Ticket</button>
+
+    <div class="dashboard-sections">
+      <div class="section-card">
+        <h2>Solicitar Asesoría</h2>
+        <p>Levanta un ticket para agendar asesoría personalizada.</p>
+        <button>Levantar Ticket</button>
+      </div>
+      <div class="section-card">
+        <h2>Material de Consulta</h2>
+        <p>Accede a artículos, guías y documentos disponibles.</p>
+        <button>Ver Material</button>
+      </div>
+      <div class="section-card">
+        <h2>Cursos Disponibles</h2>
+        <p>Explora los cursos que ofrecemos actualmente.</p>
+        <button>Ver Cursos</button>
+      </div>
+      <div class="section-card">
+        <h2>Mis Cursos</h2>
+        <p>Revisa los cursos que has adquirido y tu progreso.</p>
+        <button onclick="window.location.href='mis-cursos.html'">Ir a Mis Cursos</button>
+      </div>
+    </div>
+
+    <div class="logout-container">
+      <button onclick="logout()">Cerrar sesión</button>
+    </div>
   </div>
 
-  <!-- Material de consulta -->
-  <div class="section-card">
-    <h2>Material de Consulta</h2>
-    <p>Accede a artículos, guías y documentos disponibles.</p>
-    <button>Ver Material</button>
-  </div>
-
-  <!-- Cursos ofertados -->
-  <div class="section-card">
-    <h2>Cursos Disponibles</h2>
-    <p>Explora los cursos que ofrecemos actualmente.</p>
-    <button>Ver Cursos</button>
-  </div>
-
-  <!-- Mis cursos -->
-  <div class="section-card">
-    <h2>Mis Cursos</h2>
-    <p>Revisa los cursos que has adquirido y tu progreso.</p>
-    <button onclick="window.location.href='mis-cursos.html'">Ir a Mis Cursos</button>
-  </div>
-<div class="logout-container">
-  <button class="logout-btn" onclick="logout()">Cerrar sesión</button>
-</div>
+  <footer>
+    <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
+  </footer>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } 
-      from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
@@ -240,20 +175,12 @@ nav a {
       appId: "1:356389037138:web:bdc9cd1c2a8acfd2bbab8b",
       measurementId: "G-XV8TV6P3Z1"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    onAuthStateChanged(auth, (user) => {
-      if (!user) window.location.href = "index.html";
-    });
+    onAuthStateChanged(auth, user => { if (!user) window.location.href = "index.html"; });
 
-    window.logout = function() {
-      signOut(auth).then(() => window.location.href = "index.html");
-    };
+    window.logout = () => { signOut(auth).then(() => window.location.href = "index.html"); };
   </script>
-        <footer>
-  <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
-</footer>
 </body>
 </html>
