--- a/mis-cursos.html
+++ b/mis-cursos.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mis Cursos - Lean Solutions</title>
   <style>
-    :root {
-      --azul-oscuro: #1D2A4D;
-      --azul-claro: #6EA8D8;
-    }
+    :root { --azul-oscuro: #1D2A4D; --azul-claro: #6EA8D8; }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -16,6 +14,8 @@
       background-size: cover;
       color: var(--azul-oscuro);
     }
+
+    /* Header */
     header { 
       display: flex; 
       justify-content: space-between; 
@@ -43,8 +43,19 @@
       border-radius: 50px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-    nav a { margin: 0 20px; color: white; text-decoration: none; font-weight: bold; }
-    nav a:hover { color: var(--azul-claro); }
+    nav { display: flex; align-items: center; gap: 15px; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    nav button {
+      background-color: var(--azul-claro);
+      border: none;
+      padding: 8px 16px;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    nav button:hover { background-color: #4b89b3; }
 
     .courses-container {
       background: white;
@@ -54,15 +65,9 @@
       max-width: 900px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
-    .course {
-      margin-bottom: 20px;
-    }
-    .progress {
-      background: #ddd;
-      border-radius: 8px;
-      overflow: hidden;
-      margin: 10px 0;
-    }
+
+    .course { margin-bottom: 20px; }
+    .progress { background: #ddd; border-radius: 8px; overflow: hidden; margin: 10px 0; }
     .progress-bar {
       background: var(--azul-claro);
       color: white;
@@ -70,6 +75,13 @@
       padding: 5px 0;
       border-radius: 8px 0 0 8px;
       font-size: 14px;
+    }
+
+    footer {
+      background-color: var(--azul-oscuro);
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
@@ -80,55 +92,4 @@
       <a href="panel.html">Panel</a>
       <a href="mis-cursos.html">Mis Cursos</a>
       <a href="about.html">Acerca</a>
-      <button id="logout-btn">Cerrar sesión</button>
-    </nav>
-  </header>
-
-  <div class="courses-container">
-    <h1>Mis Cursos</h1>
-    
-    <div class="course">
-      <h3>Curso de Lean Manufacturing</h3>
-      <div class="progress"><div class="progress-bar" style="width: 70%;">70%</div></div>
-    </div>
-
-    <div class="course">
-      <h3>Curso de Gestión de Proyectos</h3>
-      <div class="progress"><div class="progress-bar" style="width: 40%;">40%</div></div>
-    </div>
-
-    <div class="course">
-      <h3>Curso de Innovación Empresarial</h3>
-      <div class="progress"><div class="progress-bar" style="width: 15%;">15%</div></div>
-    </div>
-  </div>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
-      authDomain: "cursos-7ae54.firebaseapp.com",
-      projectId: "cursos-7ae54",
-      storageBucket: "cursos-7ae54.firebasestorage.app",
-      messagingSenderId: "356389037138",
-      appId: "1:356389037138:web:bdc9cd1c2a8acfd2bbab8b",
-      measurementId: "G-XV8TV6P3Z1"
-    };
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    onAuthStateChanged(auth, (user) => {
-      if (!user) window.location.href = "index.html";
-    });
-
-    document.getElementById("logout-btn").addEventListener("click", () => {
-      signOut(auth).then(() => window.location.href = "index.html");
-    });
-  </script>
-  <footer>
-  <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
-</footer>
-</body>
-</html>
+      <button id="logout-btn">Cerrar sesión
