--- a/index.html
+++ b/index.html
@@ -5,17 +5,107 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lean Solutions</title>
   <link rel="stylesheet" href="styles.css">
-
-  <!-- OwlCarousel -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+  <style>
+    :root {
+      --azul-oscuro: #1D2A4D;
+      --azul-claro: #6EA8D8;
+      --gris-claro: #F5F5F5;
+      --texto-carousel: rgba(255,255,255,0.9);
+    }
+
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url("textura-fondo.jpg") no-repeat center center fixed;
+      background-size: cover;
+      color: var(--azul-oscuro);
+    }
+
+    /* Header */
+    header { 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+      padding: 10px 40px; 
+      background: var(--azul-oscuro); 
+      color: white;
+      border-bottom: 2px solid rgba(255,255,255,0.2);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      position: relative;
+    }
+    header::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 6px;
+      background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
+    }
+
+    header .logo img {
+      height: 60px; /* Tamaño controlado */
+      width: auto;
+      display: block;
+      background-color: #FFFFFF;
+      padding: 5px;
+      border-radius: 50px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+
+    nav { display: flex; align-items: center; gap: 15px; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    nav button {
+      padding: 8px 16px;
+      border-radius: 5px;
+      border: none;
+      background: var(--azul-claro);
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    nav button:hover { background: #4b89b3; }
+
+    /* Carousel */
+    .owl-carousel .item img {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    .carousel-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: var(--texto-carousel);
+      font-size: 2em;
+      font-weight: bold;
+      text-align: center;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+      width: 80%;
+      padding: 0 20px;
+    }
+
+    section { padding: 60px 20px; text-align: center; }
+    h2 { color: var(--azul-oscuro); }
+
+    footer {
+      background-color: var(--azul-oscuro);
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <div class="logo">
-      <a href="index.html"><img src="logo.png" alt="Lean Solutions"></a>
-    </div>
-    <nav id="nav-links">
+    <div class="logo"><a href="#"><img src="logo.png" alt="Lean Solutions"></a></div>
+    <nav>
       <a href="#home">Inicio</a>
       <a href="#services">Servicios</a>
       <a href="about.html">Acerca</a>
@@ -26,9 +116,18 @@
 
   <section id="home">
     <div class="owl-carousel owl-theme">
-      <div class="item"><img src="imagen1.jpg"><div class="carousel-text">Consultoría General y Especializada</div></div>
-      <div class="item"><img src="imagen2.jpg"><div class="carousel-text">Cursos en Línea con Constancia SEP</div></div>
-      <div class="item"><img src="imagen3.jpg"><div class="carousel-text">Impulsa tu Negocio con LeanSolutions</div></div>
+      <div class="item">
+        <img src="imagen1.jpg" alt="Imagen 1">
+        <div class="carousel-text">Consultoría General y Especializada para tu Empresa</div>
+      </div>
+      <div class="item">
+        <img src="imagen2.jpg" alt="Imagen 2">
+        <div class="carousel-text">Cursos en Línea con Constancia Oficial ante la SEP</div>
+      </div>
+      <div class="item">
+        <img src="imagen3.jpg" alt="Imagen 3">
+        <div class="carousel-text">Impulsa tu Negocio con LeanSolutions</div>
+      </div>
     </div>
   </section>
 
@@ -44,59 +143,20 @@
 
   <section id="contact">
     <h2>Contacto</h2>
+    <p>Llámanos o envíanos un mensaje para elevar el rendimiento de tu empresa.</p>
     <p>Tel: <a href="tel:+pendiente">+pendiente</a></p>
     <p>Email: <a href="mailto:pendiente.com">pendiente.com</a></p>
   </section>
-
-  <!-- Modal Login -->
-  <div id="login-modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Acceso</h2>
-      <input type="email" id="email" placeholder="Correo electrónico">
-      <input type="password" id="password" placeholder="Contraseña">
-      <button class="submit" id="submit-login">Entrar</button>
-      <button class="submit" id="submit-register">Registrarse</button>
-      <p id="login-error" style="color:red;"></p>
-    </div>
-  </div>
 
   <footer>
     <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
   </footer>
 
-  <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script>
-    $(document).ready(function(){
-      $('.owl-carousel').owlCarousel({
-        items:1,
-        loop:true,
-        autoplay:true,
-        autoplayTimeout:4000,
-        autoplayHoverPause:true,
-        animateOut: 'fadeOut',
-        animateIn: 'fadeIn',
-        nav:true,
-        dots:true
-      });
-    });
-
-    // Modal básico
-    const modal = document.getElementById("login-modal");
-    const btn = document.getElementById("login-btn");
-    const span = document.getElementsByClassName("close")[0];
-    if (btn) btn.onclick = () => modal.style.display = "block";
-    if (span) span.onclick = () => modal.style.display = "none";
-    window.onclick = (e) => { if(e.target == modal) modal.style.display = "none"; }
-  </script>
-
-  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut } 
-      from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
@@ -110,36 +170,34 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Estado de sesión
-    onAuthStateChanged(auth, (user) => {
-      const nav = document.getElementById("nav-links");
+    const loginBtn = document.getElementById("login-btn");
+
+    onAuthStateChanged(auth, user => {
       if (user) {
-        document.getElementById("login-btn")?.remove();
-        nav.innerHTML += `
-          <button id="panel-btn">Ir al Panel</button>
-          <button id="logout-btn">Cerrar sesión</button>
+        // Usuario logueado → mostrar botones Panel y Cerrar sesión
+        loginBtn.outerHTML = `
+          <div style="display:flex; gap:10px;">
+            <button id="panel-btn">Ir al Panel</button>
+            <button id="logout-btn">Cerrar sesión</button>
+          </div>
         `;
         document.getElementById("panel-btn").onclick = () => window.location.href = "panel.html";
         document.getElementById("logout-btn").onclick = () => signOut(auth).then(() => location.reload());
       }
     });
 
-    // Login
-    document.getElementById("submit-login").addEventListener("click", () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => window.location.href = "panel.html")
-        .catch(err => document.getElementById("login-error").innerText = err.message);
-    });
-
-    // Registro
-    document.getElementById("submit-register").addEventListener("click", () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      createUserWithEmailAndPassword(auth, email, password)
-        .then(() => window.location.href = "panel.html")
-        .catch(err => document.getElementById("login-error").innerText = err.message);
+    $(document).ready(function(){
+      $('.owl-carousel').owlCarousel({
+        items:1,
+        loop:true,
+        autoplay:true,
+        autoplayTimeout:4000,
+        autoplayHoverPause:true,
+        animateOut: 'fadeOut',
+        animateIn: 'fadeIn',
+        nav:true,
+        dots:true
+      });
     });
   </script>
 </body>
