--- a/index.html
+++ b/index.html
@@ -1,204 +1,300 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lean Solutions</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lean Solutions</title>
+    <link rel="stylesheet" href="styles.css">
 
-  <style>
-    :root {
-      --azul-oscuro: #1D2A4D;
-      --azul-claro: #6EA8D8;
-      --gris-claro: #F5F5F5;
-      --texto-carousel: rgba(255,255,255,0.9);
-    }
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: url("textura-fondo.jpg") no-repeat center center fixed;
-      background-size: cover;
-      color: var(--azul-oscuro);
-    }
+    <style>
+        :root {
+            --azul-oscuro: #1D2A4D;
+            --azul-claro: #6EA8D8;
+            --gris-claro: #F5F5F5;
+            --texto-carousel: rgba(255,255,255,0.9);
+        }
 
-    /* Header */
-    header { 
-      display: flex; 
-      justify-content: space-between; 
-      align-items: center; 
-      padding: 10px 40px; 
-      background: var(--azul-oscuro); 
-      color: white;
-      border-bottom: 2px solid rgba(255,255,255,0.2);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      position: relative;
-    }
-    header::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 6px;
-      background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
-    }
+        body { 
+            margin:0; 
+            font-family: Arial, sans-serif; 
+            background: url("textura-fondo.jpg") no-repeat center center fixed; 
+            background-size: cover;
+            color: var(--azul-oscuro); 
+        }
 
-    header .logo img {
-      height: 60px; /* Tamaño controlado */
-      width: auto;
-      display: block;
-      background-color: #FFFFFF;
-      padding: 5px;
-      border-radius: 50px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
+        /* Header */
+        header { 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            padding: 10px 40px; 
+            background: var(--azul-oscuro); 
+            color: white;
+            border-bottom: 2px solid rgba(255,255,255,0.2);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            position: relative;
+        }
+        header::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 6px;
+            background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
+        }
 
-    nav { display: flex; align-items: center; gap: 15px; }
-    nav a { color: white; text-decoration: none; font-weight: bold; }
-    nav button {
-      padding: 8px 16px;
-      border-radius: 5px;
-      border: none;
-      background: var(--azul-claro);
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    nav button:hover { background: #4b89b3; }
+        header .logo img {
+            height: 50px;
+            width: auto;
+            display: block;
+            background-color: #FFFFFF;
+            padding: 10px;
+            border-radius: 50px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
 
-    /* Carousel */
-    .owl-carousel .item img {
-      width: 100%;
-      height: 400px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-    .carousel-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: var(--texto-carousel);
-      font-size: 2em;
-      font-weight: bold;
-      text-align: center;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
-      width: 80%;
-      padding: 0 20px;
-    }
+        nav { display: flex; align-items: center; gap: 15px; }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover { color: var(--azul-claro); }
 
-    section { padding: 60px 20px; text-align: center; }
-    h2 { color: var(--azul-oscuro); }
+        #login-btn, .auth-btn {
+            padding: 8px 16px;
+            background-color: var(--azul-claro);
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        #login-btn:hover, .auth-btn:hover { background-color: #4b89b3; }
 
-    footer {
-      background-color: var(--azul-oscuro);
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
+        /* Carousel */
+        .owl-carousel .item { position: relative; }
+        .owl-carousel .item img { 
+            width: 100%; 
+            height: 500px; 
+            object-fit: cover; 
+            border-radius: 10px; 
+        }
+        .carousel-text { 
+            position: absolute;
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%); 
+            color: var(--texto-carousel); 
+            text-align: center; 
+            font-family: 'Georgia', serif;
+            font-size: 2em; 
+            font-weight: bold; 
+            text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+            padding: 0 20px;
+            width: 80%;
+            background: rgba(0,0,0,0.25); /* Sutil sombreado para mejorar legibilidad */
+            border-radius: 10px;
+        }
+
+        /* Modal */
+        .modal { 
+            display: none; 
+            position: fixed; 
+            z-index: 1000; 
+            left: 0; top: 0; 
+            width: 100%; height: 100%;
+            background-color: rgba(0,0,0,0.7); 
+        }
+        .modal-content { 
+            background-color: #fff; 
+            margin: 10% auto; 
+            padding: 20px; 
+            border-radius: 10px; 
+            width: 90%; 
+            max-width: 400px; 
+        }
+        .close { 
+            color: #aaa; 
+            float: right; 
+            font-size: 28px; 
+            cursor: pointer; 
+        }
+        input { 
+            width: 100%; 
+            padding: 8px; 
+            margin: 10px 0; 
+            border-radius: 5px; 
+            border: 1px solid #ccc; 
+        }
+        button.submit { 
+            background-color: var(--azul-oscuro); 
+            color: white; 
+            border: none; 
+            padding: 10px; 
+            width: 100%; 
+            border-radius: 5px; 
+            cursor: pointer; 
+            font-weight: bold; 
+        }
+        button.submit:hover { background-color: #0f1c33; }
+
+        section { padding: 60px 20px; text-align: center; }
+        h2 { color: var(--azul-oscuro); }
+
+        footer { 
+            background-color: var(--azul-oscuro); 
+            color: white; 
+            text-align: center; 
+            padding: 20px; 
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <a href="#home"><img src="logo.png" alt="Lean Solutions"></a> 
+        </div>
+        <nav id="nav-auth">
+            <a href="#home">Inicio</a>
+            <a href="#services">Servicios</a>
+            <a href="about.html">Acerca</a>
+            <a href="#contact">Contacto</a>
+            <button id="login-btn">Acceso</button>
+        </nav>
+    </header>
 
-  <header>
-    <div class="logo"><a href="#"><img src="logo.png" alt="Lean Solutions"></a></div>
-    <nav>
-      <a href="#home">Inicio</a>
-      <a href="#services">Servicios</a>
-      <a href="about.html">Acerca</a>
-      <a href="#contact">Contacto</a>
-      <button id="login-btn">Acceso</button>
-    </nav>
-  </header>
+    <section id="home">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img src="imagen1.jpg" alt="Imagen 1"> 
+                <div class="carousel-text">Consultoría General y Especializada para tu Empresa</div>
+            </div>
+            <div class="item">
+                <img src="imagen2.jpg" alt="Imagen 2"> 
+                <div class="carousel-text">Cursos en Línea con Constancia Oficial ante la SEP</div>
+            </div>
+            <div class="item">
+                <img src="imagen3.jpg" alt="Imagen 3"> 
+                <div class="carousel-text">Impulsa tu Negocio con LeanSolutions</div>
+            </div>
+        </div>
+    </section>
 
-  <section id="home">
-    <div class="owl-carousel owl-theme">
-      <div class="item">
-        <img src="imagen1.jpg" alt="Imagen 1">
-        <div class="carousel-text">Consultoría General y Especializada para tu Empresa</div>
-      </div>
-      <div class="item">
-        <img src="imagen2.jpg" alt="Imagen 2">
-        <div class="carousel-text">Cursos en Línea con Constancia Oficial ante la SEP</div>
-      </div>
-      <div class="item">
-        <img src="imagen3.jpg" alt="Imagen 3">
-        <div class="carousel-text">Impulsa tu Negocio con LeanSolutions</div>
-      </div>
+    <section id="services">
+        <h2>Servicios</h2>
+        <p>Ofrecemos soluciones personalizadas y sostenibles para tu negocio.</p>
+    </section>
+
+    <section id="about">
+        <h2>Acerca de Nosotros</h2>
+        <p>Lean Solutions está liderado por profesionales con amplia experiencia en la industria.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contacto</h2>
+        <p>Llámanos o envíanos un mensaje para elevar el rendimiento de tu empresa.</p>
+        <p>Tel: <a href="tel:+pendiente">+pendiente</a></p>
+        <p>Email: <a href="mailto:pendiente.com">pendiente.com</a></p>
+    </section>
+
+    <div id="login-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Acceso</h2>
+            <input type="email" id="email" placeholder="Correo electrónico">
+            <input type="password" id="password" placeholder="Contraseña">
+            <button class="submit" id="submit-login">Entrar</button>
+            <button class="submit" id="submit-register">Registrarse</button>
+            <p id="login-error" style="color:red;"></p>
+        </div>
     </div>
-  </section>
 
-  <section id="services">
-    <h2>Servicios</h2>
-    <p>Ofrecemos soluciones personalizadas y sostenibles para tu negocio.</p>
-  </section>
+    <footer>
+        <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
+    </footer>
 
-  <section id="about">
-    <h2>Acerca de Nosotros</h2>
-    <p>Lean Solutions está liderado por profesionales con amplia experiencia en la industria.</p>
-  </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-  <section id="contact">
-    <h2>Contacto</h2>
-    <p>Llámanos o envíanos un mensaje para elevar el rendimiento de tu empresa.</p>
-    <p>Tel: <a href="tel:+pendiente">+pendiente</a></p>
-    <p>Email: <a href="mailto:pendiente.com">pendiente.com</a></p>
-  </section>
+    <script>
+        $(document).ready(function(){
+            $('.owl-carousel').owlCarousel({
+                items:1,
+                loop:true,
+                autoplay:true,
+                autoplayTimeout:4000,
+                autoplayHoverPause:true,
+                animateOut: 'fadeOut',
+                animateIn: 'fadeIn',
+                nav:true,
+                dots:true
+            });
+        });
 
-  <footer>
-    <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
-  </footer>
+        const modal = document.getElementById("login-modal");
+        const btn = document.getElementById("login-btn");
+        const span = document.getElementsByClassName("close")[0];
+        btn.onclick = () => modal.style.display = "block";
+        span.onclick = () => modal.style.display = "none";
+        window.onclick = (e) => { if(e.target == modal) modal.style.display = "none"; }
+    </script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut } 
+        from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
-      authDomain: "cursos-7ae54.firebaseapp.com",
-      projectId: "cursos-7ae54",
-      storageBucket: "cursos-7ae54.firebasestorage.app",
-      messagingSenderId: "356389037138",
-      appId: "1:356389037138:web:bdc9cd1c2a8acfd2bbab8b",
-      measurementId: "G-XV8TV6P3Z1"
-    };
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+        const firebaseConfig = {
+            apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
+            authDomain: "cursos-7ae54.firebaseapp.com",
+            projectId: "cursos-7ae54",
+            storageBucket: "cursos-7ae54.firebasestorage.app",
+            messagingSenderId: "356389037138",
+            appId: "1:356389037138:web:bdc9cd1c2a8acfd2bbab8b",
+            measurementId: "G-XV8TV6P3Z1"
+        };
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
 
-    const loginBtn = document.getElementById("login-btn");
+        // LOGIN
+        document.getElementById("submit-login").addEventListener("click", () => {
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+            signInWithEmailAndPassword(auth, email, password)
+                .then(() => { window.location.href = "panel.html"; })
+                .catch(err => { document.getElementById("login-error").innerText = err.message; });
+        });
 
-    onAuthStateChanged(auth, user => {
-      if (user) {
-        // Usuario logueado → mostrar botones Panel y Cerrar sesión
-        loginBtn.outerHTML = `
-          <div style="display:flex; gap:10px;">
-            <button id="panel-btn">Ir al Panel</button>
-            <button id="logout-btn">Cerrar sesión</button>
-          </div>
-        `;
-        document.getElementById("panel-btn").onclick = () => window.location.href = "panel.html";
-        document.getElementById("logout-btn").onclick = () => signOut(auth).then(() => location.reload());
-      }
-    });
+        // REGISTRO
+        document.getElementById("submit-register").addEventListener("click", () => {
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+            createUserWithEmailAndPassword(auth, email, password)
+                .then(() => { window.location.href = "panel.html"; })
+                .catch(err => { document.getElementById("login-error").innerText = err.message; });
+        });
 
-    $(document).ready(function(){
-      $('.owl-carousel').owlCarousel({
-        items:1,
-        loop:true,
-        autoplay:true,
-        autoplayTimeout:4000,
-        autoplayHoverPause:true,
-        animateOut: 'fadeOut',
-        animateIn: 'fadeIn',
-        nav:true,
-        dots:true
-      });
-    });
-  </script>
+        // Mostrar botones Panel/Cerrar sesión si ya está logueado
+        const navAuth = document.getElementById("nav-auth");
+        onAuthStateChanged(auth, user => {
+            if(user){
+                navAuth.innerHTML = `
+                    <a href="#home">Inicio</a>
+                    <a href="#services">Servicios</a>
+                    <a href="about.html">Acerca</a>
+                    <a href="#contact">Contacto</a>
+                    <button class="auth-btn" id="panel-btn">Panel</button>
+                    <button class="auth-btn" id="logout-btn">Cerrar sesión</button>
+                `;
+                document.getElementById("panel-btn").onclick = () => window.location.href = "panel.html";
+                document.getElementById("logout-btn").onclick = () => signOut(auth).then(() => location.reload());
+            }
+        });
+    </script>
 </body>
 </html>
