--- a/mis-cursos.html
+++ b/mis-cursos.html
@@ -58,7 +58,7 @@
     nav button:hover { background-color: #4b89b3; }
 
     .courses-container {
-      background: white;
+      background: rgba(255,255,255,0.95);
       margin: 40px auto;
       padding: 30px;
       border-radius: 15px;
@@ -67,6 +67,7 @@
     }
 
     .course { margin-bottom: 20px; }
+    .course h3 { margin-bottom: 5px; }
     .progress { background: #ddd; border-radius: 8px; overflow: hidden; margin: 10px 0; }
     .progress-bar {
       background: var(--azul-claro);
@@ -75,6 +76,7 @@
       padding: 5px 0;
       border-radius: 8px 0 0 8px;
       font-size: 14px;
+      width: 0%;
     }
 
     footer {
@@ -92,4 +94,39 @@
       <a href="panel.html">Panel</a>
       <a href="mis-cursos.html">Mis Cursos</a>
       <a href="about.html">Acerca</a>
-      <button id="logout-btn">Cerrar sesión
+      <button id="logout-btn">Cerrar sesión</button>
+    </nav>
+  </header>
+
+  <div class="courses-container">
+    <h2>Mis Cursos</h2>
+
+    <div class="course">
+      <h3>Curso de Lean Management</h3>
+      <div class="progress"><div class="progress-bar" style="width: 70%;">70%</div></div>
+    </div>
+
+    <div class="course">
+      <h3>Curso de Mejora Continua</h3>
+      <div class="progress"><div class="progress-bar" style="width: 45%;">45%</div></div>
+    </div>
+
+    <div class="course">
+      <h3>Curso de Gestión de Proyectos</h3>
+      <div class="progress"><div class="progress-bar" style="width: 20%;">20%</div></div>
+    </div>
+  </div>
+
+  <footer>
+    <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
+  </footer>
+
+  <script>
+    document.getElementById("logout-btn").onclick = () => {
+      // Aquí puedes poner tu lógica de logout de Firebase
+      alert("Sesión cerrada (simulado)");
+      window.location.href = "index.html";
+    }
+  </script>
+</body>
+</html>
