mis-cursos.html

--- a/mis-cursos.html
+++ b/mis-cursos.html
@@ -79,12 +79,18 @@
       width: 0%;
     }
 
-    footer {
-      background-color: var(--azul-oscuro);
-      color: white;
-      text-align: center;
-      padding: 20px;
+        display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
+    
+    main, .courses-container, .panel-container, section {
+      flex: 1; /* Esto hace que el contenido crezca y empuje el footer hacia abajo */
+    }
+
+    footer {
+      margin-top: auto; /* Empuja el footer al fondo */
+    }  
   </style>
 </head>
 <body>
